# learn-arcade-work

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  LICENSE  LICENSE.txt  Makefile  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
notebooks/: template.ipynb
scripts/: train_model.py
src/learn_arcade_work/: __init__.py  lab_02.py
src/learn_arcade_work/scratch_work/: drawing_samples.py
tests/: conftest.py
